--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before install:
 
 script:
   - docker run -e CI=true arpan9889/docker-react yarn test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-633719994672"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
